Fix footer styles on iOS

--- a/public/styles.css
+++ b/public/styles.css
@@ -4,18 +4,13 @@
     box-sizing: border-box;
 }
 
-html {
-    min-height: -webkit-fill-available;
-}
 
 body {
     display: flex;
     justify-content: center;
     background-color: black;
     color: white;
-    min-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
-    min-height: -webkit-fill-available;
 }
 
 .container {
@@ -25,7 +20,6 @@ body {
     flex-direction: column;
     font-size:large;
     min-height: 100vh;
-    min-height: -webkit-fill-available;
 }
 
 .content {
@@ -77,3 +71,10 @@ a, a:visited, a:hover, a:active {
     color: red;
     text-align: center;
 }
+
+@supports (-webkit-touch-callout: none) {
+    .container {
+      /* The hack for Safari */
+      min-height: -webkit-fill-available;
+    }
+  }
